Collection Subpages Added

--- a/pages/Store_Subpages/Categories_Pages/albums.html
+++ b/pages/Store_Subpages/Categories_Pages/albums.html
@@ -54,12 +54,12 @@
                           Collections
                         </a>
                         <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">Album 1</a></li>
-                          <li><a class="dropdown-item" href="#">Album 2</a></li>
-                          <li><a class="dropdown-item" href="#">Album 3</a></li>
-                          <li><a class="dropdown-item" href="#">Album 4</a></li>
-                          <li><a class="dropdown-item" href="#">Album 5</a></li>
-                          <li><a class="dropdown-item" href="#">Gone But Not Forgotten</a></li>
+                            <li><a class="dropdown-item" href="../Collections_Pages/col1.html">Venomous Predator</a></li>
+                            <li><a class="dropdown-item" href="../Collections_Pages/col2.html">On a Ledge</a></li>
+                            <li><a class="dropdown-item" href="../Collections_Pages/col3.html">Locked Away</a></li>
+                            <li><a class="dropdown-item" href="../Collections_Pages/col4.html">Carnival of Insanity</a></li>
+                            <li><a class="dropdown-item" href="../Collections_Pages/col5.html">Devoid of Light</a></li>
+                            <li><a class="dropdown-item" href="../Collections_Pages/col6.html">Gone But Not Forgotten</a></li>
                         </ul>
                       </li>
                       <li class="nav-item dropdown">
@@ -89,8 +89,8 @@
                 <div class="card mx-auto" style="width: 50%;">
                     <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">Album 1</h5>
-                    <p class="card-text"></p>
+                    <h5 class="card-title">Venomous Predator</h5>
+                    <p class="card-text">A set of songs focusing on serpentine creatures and their sharp fangs</p>
                     <a href="#" class="btn btn-primary">Take a look</a>
                     </div>
                 </div>
@@ -100,8 +100,8 @@
                 <div class="card mx-auto" style="width: 50%;">
                     <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">Album 2</h5>
-                    <p class="card-text"></p>
+                    <h5 class="card-title">On a Ledge</h5>
+                    <p class="card-text">A set of songs focusing on being on the brink of falling</p>
                     <a href="#" class="btn btn-primary">Take a look</a>
                     </div>
                 </div>
@@ -111,8 +111,8 @@
                 <div class="card mx-auto" style="width: 50%;">
                     <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">Album 3</h5>
-                    <p class="card-text"></p>
+                    <h5 class="card-title">Locked Away</h5>
+                    <p class="card-text">A set of songs focusing on being trapped and cramped</p>
                     <a href="#" class="btn btn-primary">Take a look</a>
                     </div>
                 </div>
@@ -126,8 +126,8 @@
                 <div class="card mx-auto" style="width: 50%;">
                     <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">Album 4</h5>
-                    <p class="card-text"></p>
+                    <h5 class="card-title">Carnival of Insanity</h5>
+                    <p class="card-text">A set of songs focusing on clowns and games</p>
                     <a href="#" class="btn btn-primary">Take a look</a>
                     </div>
                 </div>
@@ -137,8 +137,8 @@
                 <div class="card mx-auto" style="width: 50%;">
                     <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">Album 5</h5>
-                    <p class="card-text"></p>
+                    <h5 class="card-title">Devoid of Light</h5>
+                    <p class="card-text">A set of songs focusing on darkness and the unknown</p>
                     <a href="#" class="btn btn-primary">Take a look</a>
                     </div>
                 </div>
