--- a/pages/Store_Subpages/Categories_Pages/other.html
+++ b/pages/Store_Subpages/Categories_Pages/other.html
@@ -23,7 +23,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto navbar-main">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" href="../../../index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../../music.html">Music</a>
@@ -32,7 +32,7 @@
                             <a class="nav-link active" href="../../store.html">Store</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../tour.html">Tour</a>
+                            <a class="nav-link" href="../../tour.html">Tour</a>
                         </li>
                     </ul>
                 </div>
@@ -40,7 +40,7 @@
         </nav>
 
         <div class="container-fluid head-container" style="padding: 50px; min-width: 100%;">
-            <h1>Store: Hats</h1>
+            <h1>Store: Accessories</h1>
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="#">Sections</a>
@@ -54,12 +54,12 @@
                           Collections
                         </a>
                         <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">Album 1</a></li>
-                          <li><a class="dropdown-item" href="#">Album 2</a></li>
-                          <li><a class="dropdown-item" href="#">Album 3</a></li>
-                          <li><a class="dropdown-item" href="#">Album 4</a></li>
-                          <li><a class="dropdown-item" href="#">Album 5</a></li>
-                          <li><a class="dropdown-item" href="#">Gone But Not Forgotten</a></li>
+                          <li><a class="dropdown-item" href="../Collections_Pages/col1.html">Venomous Predator</a></li>
+                          <li><a class="dropdown-item" href="../Collections_Pages/col2.html">On a Ledge</a></li>
+                          <li><a class="dropdown-item" href="../Collections_Pages/col3.html">Locked Away</a></li>
+                          <li><a class="dropdown-item" href="../Collections_Pages/col4.html">Carnival of Insanity</a></li>
+                          <li><a class="dropdown-item" href="../Collections_Pages/col5.html">Devoid of Light</a></li>
+                          <li><a class="dropdown-item" href="../Collections_Pages/col6.html">Gone But Not Forgotten</a></li>
                         </ul>
                       </li>
                       <li class="nav-item dropdown">
@@ -68,8 +68,8 @@
                         </a>
                         <ul class="dropdown-menu">
                           <li><a class="dropdown-item" href="tops.html">Tops</a></li>
-                          <li><a class="dropdown-item active" href="#">Hats</a></li>
-                          <li><a class="dropdown-item" href="other.html">Accessories</a></li>
+                          <li><a class="dropdown-item" href="hats.html">Hats</a></li>
+                          <li><a class="dropdown-item active" href="#">Accessories</a></li>
                           <li><a class="dropdown-item" href="posters.html">Posters</a></li>
                           <li><a class="dropdown-item" href="albums.html">Albums</a></li>
                           <li><a class="dropdown-item" href="tickets.html">Tickets</a></li>
@@ -89,8 +89,8 @@
                 <div class="card mx-auto" style="width: 50%;">
                     <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">Scream Team Beanie</h5>
-                    <p class="card-text">A hat for the Scream Team during winter</p>
+                    <h5 class="card-title">Scream Team Keychain</h5>
+                    <p class="card-text">Keep a token of Stage Fright with you at all times</p>
                     <a href="#" class="btn btn-primary">Take a look</a>
                     </div>
                 </div>
@@ -100,8 +100,8 @@
                 <div class="card mx-auto" style="width: 50%;">
                     <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">Scream Team Baseball Cap</h5>
-                    <p class="card-text">Go into summer rocking this Scream Team hat</p>
+                    <h5 class="card-title">Scream Team Sticker Pack</h5>
+                    <p class="card-text">Slap these on your computer, desk, wherever to represent your favorite band</p>
                     <a href="#" class="btn btn-primary">Take a look</a>
                     </div>
                 </div>
@@ -111,14 +111,14 @@
                 <div class="card mx-auto" style="width: 50%;">
                     <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">Scream Team Trucker Hat</h5>
-                    <p class="card-text">Cruise down the road while representing Stage Fright</p>
+                    <h5 class="card-title">Scream Team Charms</h5>
+                    <p class="card-text">Put these on a necklace or bracelet and share with your friends</p>
                     <a href="#" class="btn btn-primary">Take a look</a>
                     </div>
                 </div>
             </div>
         </div>
 
-        <script src="../../js/bootstrap.bundle.js"></script>
+        <script src="../../../js/bootstrap.bundle.js"></script>
     </body>
 </html>
