--- a/pages/store.html
+++ b/pages/store.html
@@ -56,12 +56,12 @@
                   Collections
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Album 1</a></li>
-                  <li><a class="dropdown-item" href="#">Album 2</a></li>
-                  <li><a class="dropdown-item" href="#">Album 3</a></li>
-                  <li><a class="dropdown-item" href="#">Album 4</a></li>
-                  <li><a class="dropdown-item" href="#">Album 5</a></li>
-                  <li><a class="dropdown-item" href="#">Gone But Not Forgotten</a></li>
+                  <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col1.html">Venomous Predator</a></li>
+                  <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col2.html">On a Ledge</a></li>
+                  <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col3.html">Locked Away</a></li>
+                  <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col4.html">Carnival of Insanity</a></li>
+                  <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col5.html">Devoid of Light</a></li>
+                  <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col6.html">Gone But Not Forgotten</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -69,12 +69,12 @@
                   Categories
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="Store Subpages/tops.html">Tops</a></li>
-                  <li><a class="dropdown-item" href="Store Subpages/hats.html">Hats</a></li>
-                  <li><a class="dropdown-item" href="Store Subpages/other.html">Accessories</a></li>
-                  <li><a class="dropdown-item" href="#">Posters</a></li>
-                  <li><a class="dropdown-item" href="Store Subpages/albums.html">Albums</a></li>
-                  <li><a class="dropdown-item" href="#">Tickets</a></li>
+                  <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/tops.html">Tops</a></li>
+                  <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/hats.html">Hats</a></li>
+                  <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/other.html">Accessories</a></li>
+                  <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/posters.html">Posters</a></li>
+                  <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/albums.html">Albums</a></li>
+                  <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/tickets.html">Tickets</a></li>
                 </ul>
               </li>
               <li class="nav-item">
