--- a/pages/Store_Subpages/Categories_Pages/tops.html
+++ b/pages/Store_Subpages/Categories_Pages/tops.html
@@ -40,7 +40,7 @@
         </nav>
 
         <div class="container-fluid head-container" style="padding: 50px; min-width: 100%;">
-            <h1>Store: Posters</h1>
+            <h1>Store: Tops</h1>
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="#">Sections</a>
@@ -54,12 +54,12 @@
                           Collections
                         </a>
                         <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">Album 1</a></li>
-                          <li><a class="dropdown-item" href="#">Album 2</a></li>
-                          <li><a class="dropdown-item" href="#">Album 3</a></li>
-                          <li><a class="dropdown-item" href="#">Album 4</a></li>
-                          <li><a class="dropdown-item" href="#">Album 5</a></li>
-                          <li><a class="dropdown-item" href="#">Gone But Not Forgotten</a></li>
+                          <li><a class="dropdown-item" href="../Collections_Pages/col1.html">Venomous Predator</a></li>
+                          <li><a class="dropdown-item" href="../Collections_Pages/col2.html">On a Ledge</a></li>
+                          <li><a class="dropdown-item" href="../Collections_Pages/col3.html">Locked Away</a></li>
+                          <li><a class="dropdown-item" href="../Collections_Pages/col4.html">Carnival of Insanity</a></li>
+                          <li><a class="dropdown-item" href="../Collections_Pages/col5.html">Devoid of Light</a></li>
+                          <li><a class="dropdown-item" href="../Collections_Pages/col6.html">Gone But Not Forgotten</a></li>
                         </ul>
                       </li>
                       <li class="nav-item dropdown">
@@ -67,10 +67,10 @@
                           Categories
                         </a>
                         <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="tops.html">Tops</a></li>
+                          <li><a class="dropdown-item active" href="#">Tops</a></li>
                           <li><a class="dropdown-item" href="hats.html">Hats</a></li>
                           <li><a class="dropdown-item" href="other.html">Accessories</a></li>
-                          <li><a class="dropdown-item active" href="#">Posters</a></li>
+                          <li><a class="dropdown-item" href="posters.html">Posters</a></li>
                           <li><a class="dropdown-item" href="albums.html">Albums</a></li>
                           <li><a class="dropdown-item" href="tickets.html">Tickets</a></li>
                         </ul>
@@ -89,8 +89,8 @@
                 <div class="card mx-auto" style="width: 50%;">
                     <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">Full Band Poster</h5>
-                    <p class="card-text">Stage Fright all together</p>
+                    <h5 class="card-title">Scream Team Tee</h5>
+                    <p class="card-text">Simple T-shirt with a Stage Fright Logo</p>
                     <a href="#" class="btn btn-primary">Take a look</a>
                     </div>
                 </div>
@@ -100,8 +100,8 @@
                 <div class="card mx-auto" style="width: 50%;">
                     <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">Alec Thornstrum</h5>
-                    <p class="card-text">The siren of the band</p>
+                    <h5 class="card-title">Scream Team Sweatshirt</h5>
+                    <p class="card-text">Puffy sweatshirt with a Stage Fright Logo</p>
                     <a href="#" class="btn btn-primary">Take a look</a>
                     </div>
                 </div>
@@ -111,45 +111,8 @@
                 <div class="card mx-auto" style="width: 50%;">
                     <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">Blake Jhonson</h5>
-                    <p class="card-text">The monster on guitar</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <br>
-
-        <div class="row">
-            <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
-                    <div class="card-body">
-                    <h5 class="card-title">Nyx Blair</h5>
-                    <p class="card-text">The boss of bass</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
-                    </div>
-                </div>
-            </div>
-    
-            <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
-                    <div class="card-body">
-                    <h5 class="card-title">Jack "Stix" Borne</h5>
-                    <p class="card-text">The maniac on drums</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
-                    </div>
-                </div>
-            </div>
-    
-            <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
-                    <div class="card-body">
-                    <h5 class="card-title">Hector Jones</h5>
-                    <p class="card-text">The master of the keys himself</p>
+                    <h5 class="card-title">Scream Team Hoodie</h5>
+                    <p class="card-text">Fleece hoodie with a Stage Fright Logo on the arms and front</p>
                     <a href="#" class="btn btn-primary">Take a look</a>
                     </div>
                 </div>
