--- a/pages/Store_Subpages/Collections_Pages/col1.html
+++ b/pages/Store_Subpages/Collections_Pages/col1.html
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" style="padding-top: 1em; padding-bottom: 1em;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="../../../images/stage fright.png" alt="logo" width="70" height="70">
+                    <img src="../../../images/VP.png" alt="logo" width="70" height="70">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -40,57 +40,57 @@
         </nav>
 
         <div class="container-fluid head-container" style="padding: 50px; min-width: 100%;">
-            <h1>Store: Tops</h1>
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="#">Sections</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Collections
-                        </a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">Album 1</a></li>
-                          <li><a class="dropdown-item" href="#">Album 2</a></li>
-                          <li><a class="dropdown-item" href="#">Album 3</a></li>
-                          <li><a class="dropdown-item" href="#">Album 4</a></li>
-                          <li><a class="dropdown-item" href="#">Album 5</a></li>
-                          <li><a class="dropdown-item" href="#">Gone But Not Forgotten</a></li>
-                        </ul>
-                      </li>
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Categories
-                        </a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item active" href="#">Tops</a></li>
-                          <li><a class="dropdown-item" href="hats.html">Hats</a></li>
-                          <li><a class="dropdown-item" href="other.html">Accessories</a></li>
-                          <li><a class="dropdown-item" href="posters.html">Posters</a></li>
-                          <li><a class="dropdown-item" href="albums.html">Albums</a></li>
-                          <li><a class="dropdown-item" href="tickets.html">Tickets</a></li>
-                        </ul>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">All</a>
-                      </li>
-                    </ul>
-                  </div>
+          <h1>Store: Venomous Predator Collection</h1>
+          <nav class="navbar navbar-expand-lg bg-body-tertiary">
+              <div class="container-fluid">
+                <a class="navbar-brand" href="#">Sections</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                  <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Collections
+                      </a>
+                      <ul class="dropdown-menu">
+                        <li><a class="dropdown-item active" href="#">Venomous Predator</a></li>
+                        <li><a class="dropdown-item" href="col2.html">On a Ledge</a></li>
+                        <li><a class="dropdown-item" href="col3.html">Locked Away</a></li>
+                        <li><a class="dropdown-item" href="col4.html">Carnival of Insanity</a></li>
+                        <li><a class="dropdown-item" href="col5.html">Devoid of Light</a></li>
+                        <li><a class="dropdown-item" href="col6.html">Gone But Not Forgotten</a></li>
+                      </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Categories
+                      </a>
+                      <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="../Categories_Pages/tops.html">Tops</a></li>
+                        <li><a class="dropdown-item" href="../Categories_Pages/hats.html">Hats</a></li>
+                        <li><a class="dropdown-item" href="../Categories_Pages/other.html">Accessories</a></li>
+                        <li><a class="dropdown-item" href="../Categories_Pages/posters.html">Posters</a></li>
+                        <li><a class="dropdown-item" href="../Categories_Pages/albums.html">Albums</a></li>
+                        <li><a class="dropdown-item" href="../Categories_Pages/tickets.html">Tickets</a></li>
+                      </ul>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">All</a>
+                    </li>
+                  </ul>
                 </div>
-              </nav>
-        </div>
+              </div>
+            </nav>
+      </div>
 
         <div class="row">
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
                     <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">Scream Team Tee</h5>
-                    <p class="card-text">Simple T-shirt with a Stage Fright Logo</p>
+                    <h5 class="card-title">VP Top</h5>
+                    <p class="card-text">With a green Stage Fright logo, everyone will know you love the Gone But not Forgotten album</p>
                     <a href="#" class="btn btn-primary">Take a look</a>
                     </div>
                 </div>
@@ -100,8 +100,8 @@
                 <div class="card mx-auto" style="width: 50%;">
                     <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">Scream Team Sweatshirt</h5>
-                    <p class="card-text">Puffy sweatshirt with a Stage Fright Logo</p>
+                    <h5 class="card-title">VP Hats</h5>
+                    <p class="card-text">With a green Stage Fright logo, everyone will know you love the Gone But not Forgotten album</p>
                     <a href="#" class="btn btn-primary">Take a look</a>
                     </div>
                 </div>
@@ -111,8 +111,8 @@
                 <div class="card mx-auto" style="width: 50%;">
                     <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">Scream Team Hoodie</h5>
-                    <p class="card-text">Fleece hoodie with a Stage Fright Logo on the arms and front</p>
+                    <h5 class="card-title">VP Album</h5>
+                    <p class="card-text">Listen to songs such as Serpentine, Poison, and more</p>
                     <a href="#" class="btn btn-primary">Take a look</a>
                     </div>
                 </div>
