--- a/pages/Store_Subpages/Categories_Pages/albums.html
+++ b/pages/Store_Subpages/Categories_Pages/albums.html
@@ -76,7 +76,7 @@
                         </ul>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">All</a>
+                        <a class="nav-link" href="../all.html">All</a>
                       </li>
                     </ul>
                   </div>
@@ -90,8 +90,8 @@
                     <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
                     <h5 class="card-title">Venomous Predator</h5>
-                    <p class="card-text">A set of songs focusing on serpentine creatures and their sharp fangs</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <p class="card-text">An album focusing on serpentine creatures and their venom</p>
+                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -101,8 +101,8 @@
                     <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
                     <h5 class="card-title">On a Ledge</h5>
-                    <p class="card-text">A set of songs focusing on being on the brink of falling</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <p class="card-text">An album focusing on being on the brink of falling</p>
+                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -112,8 +112,8 @@
                     <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
                     <h5 class="card-title">Locked Away</h5>
-                    <p class="card-text">A set of songs focusing on being trapped and cramped</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <p class="card-text">An album focusing on being trapped and cramped</p>
+                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -127,8 +127,8 @@
                     <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
                     <h5 class="card-title">Carnival of Insanity</h5>
-                    <p class="card-text">A set of songs focusing on clowns and games</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <p class="card-text">An album focusing on clowns and games</p>
+                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -138,8 +138,8 @@
                     <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
                     <h5 class="card-title">Devoid of Light</h5>
-                    <p class="card-text">A set of songs focusing on darkness and the unknown</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <p class="card-text">An album focusing on darkness and the unknown</p>
+                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -150,7 +150,7 @@
                     <div class="card-body">
                     <h5 class="card-title">Gone but Not Forgotten</h5>
                     <p class="card-text">Listen to our latest album, lead by the hit song Drowning</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
                     </div>
                 </div>
             </div>
