--- a/pages/Store_Subpages/Categories_Pages/hats.html
+++ b/pages/Store_Subpages/Categories_Pages/hats.html
@@ -76,7 +76,7 @@
                         </ul>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">All</a>
+                        <a class="nav-link" href="../all.html">All</a>
                       </li>
                     </ul>
                   </div>
@@ -91,7 +91,7 @@
                     <div class="card-body">
                     <h5 class="card-title">Scream Team Beanie</h5>
                     <p class="card-text">A hat for the Scream Team during winter</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                     <div class="card-body">
                     <h5 class="card-title">Scream Team Baseball Cap</h5>
                     <p class="card-text">Go into summer rocking this Scream Team hat</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -113,7 +113,7 @@
                     <div class="card-body">
                     <h5 class="card-title">Scream Team Trucker Hat</h5>
                     <p class="card-text">Cruise down the road while representing Stage Fright</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
                     </div>
                 </div>
             </div>
