--- a/pages/Store_Subpages/Categories_Pages/other.html
+++ b/pages/Store_Subpages/Categories_Pages/other.html
@@ -76,7 +76,7 @@
                         </ul>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">All</a>
+                        <a class="nav-link" href="../all.html">All</a>
                       </li>
                     </ul>
                   </div>
@@ -91,7 +91,7 @@
                     <div class="card-body">
                     <h5 class="card-title">Scream Team Keychain</h5>
                     <p class="card-text">Keep a token of Stage Fright with you at all times</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <a href="#" class="btn btn-primary">$5.00 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                     <div class="card-body">
                     <h5 class="card-title">Scream Team Sticker Pack</h5>
                     <p class="card-text">Slap these on your computer, desk, wherever to represent your favorite band</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <a href="#" class="btn btn-primary">$5.00 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -113,7 +113,7 @@
                     <div class="card-body">
                     <h5 class="card-title">Scream Team Charms</h5>
                     <p class="card-text">Put these on a necklace or bracelet and share with your friends</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <a href="#" class="btn btn-primary">$5.00 | Take a look</a>
                     </div>
                 </div>
             </div>
