--- a/pages/Store_Subpages/Categories_Pages/posters.html
+++ b/pages/Store_Subpages/Categories_Pages/posters.html
@@ -76,7 +76,7 @@
                         </ul>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">All</a>
+                        <a class="nav-link" href="../all.html">All</a>
                       </li>
                     </ul>
                   </div>
@@ -91,7 +91,7 @@
                     <div class="card-body">
                     <h5 class="card-title">Full Band Poster</h5>
                     <p class="card-text">Stage Fright all together</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <a href="#" class="btn btn-primary">$7.50 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                     <div class="card-body">
                     <h5 class="card-title">Alec Thornstrum</h5>
                     <p class="card-text">The siren of the band</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <a href="#" class="btn btn-primary">$7.50 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -113,13 +113,11 @@
                     <div class="card-body">
                     <h5 class="card-title">Blake Jhonson</h5>
                     <p class="card-text">The monster on guitar</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <a href="#" class="btn btn-primary">$7.50 | Take a look</a>
                     </div>
                 </div>
             </div>
         </div>
-
-        <br>
 
         <div class="row">
             <div class="col-md">
@@ -128,7 +126,7 @@
                     <div class="card-body">
                     <h5 class="card-title">Nyx Blair</h5>
                     <p class="card-text">The boss of bass</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <a href="#" class="btn btn-primary">$7.50 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -139,7 +137,7 @@
                     <div class="card-body">
                     <h5 class="card-title">Jack "Stix" Borne</h5>
                     <p class="card-text">The maniac on drums</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <a href="#" class="btn btn-primary">$7.50 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -150,7 +148,7 @@
                     <div class="card-body">
                     <h5 class="card-title">Hector Jones</h5>
                     <p class="card-text">The master of the keys himself</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <a href="#" class="btn btn-primary">$7.50 | Take a look</a>
                     </div>
                 </div>
             </div>
