--- a/pages/store.html
+++ b/pages/store.html
@@ -78,7 +78,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">All</a>
+                <a class="nav-link" href="Store_Subpages/all.html">All</a>
               </li>
             </ul>
           </div>
@@ -89,7 +89,7 @@
       <div class="container-fluid">
 
         <h1 class="text-danger">Latest Release: Gone But Not Forgotten</h1>
-        <div class="col-lg">
+        <div class="col-lg store">
           <div id="storeCarousel" class="carousel slide carousel-fade">
               <div class="carousel-indicators">
                 <button type="button" data-bs-target="#storeCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -104,42 +104,42 @@
                   <img src="../images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 class="text-primary">Tops</h5>
-                    <a href="Store Subpages/Categories Pages/tops.html" class="btn btn-primary">Check It Out!</a>
+                    <a href="Store_Subpages/Collections_Pages/col6.html" class="btn btn-primary">Check It Out!</a>
                   </div>
                 </div>
                 <div class="carousel-item c-item">
                   <img src="../images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 class="text-primary">Hats</h5>
-                    <a href="Store Subpages/Categories Pages/hats.html" class="btn btn-primary">Check It Out!</a>
+                    <a href="Store_Subpages/Collections_Pages/col6.html" class="btn btn-primary">Check It Out!</a>
                   </div>
                 </div>
                 <div class="carousel-item c-item">
                   <img src="../images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 class="text-primary">Accessories</h5>
-                    <a href="Store Subpages/Categories Pages/other.html" class="btn btn-primary">Check It Out!</a>
+                    <a href="Store_Subpages/Collections_Pages/col6.html" class="btn btn-primary">Check It Out!</a>
                   </div>
                 </div>
                 <div class="carousel-item c-item">
                   <img src="../images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 class="text-primary">Posters</h5>
-                    <a href="Store Subpages/Categories Pages/posters.html" class="btn btn-primary">Check It Out!</a>
+                    <a href="Store_Subpages/Collections_Pages/col6.html" class="btn btn-primary">Check It Out!</a>
                   </div>
                 </div>
                 <div class="carousel-item c-item">
                   <img src="../images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 class="text-primary">Albums</h5>
-                    <a href="Store Subpages/Categories Pages/albums.html" class="btn btn-primary">Check It Out!</a>
+                    <a href="Store_Subpages/Collections_Pages/col6.html" class="btn btn-primary">Check It Out!</a>
                   </div>
                 </div>
                 <div class="carousel-item c-item">
                   <img src="../images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 class="text-primary">Tickets</h5>
-                    <a href="Store Subpages/Categories Pages/tickets.html" class="btn btn-primary">Check It Out!</a>
+                    <a href="Store_Subpages/Collections_Pages/col6.html" class="btn btn-primary">Check It Out!</a>
                   </div>
                 </div>
               </div>
