--- a/pages/Store_Subpages/Categories_Pages/tickets.html
+++ b/pages/Store_Subpages/Categories_Pages/tickets.html
@@ -76,7 +76,7 @@
                         </ul>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">All</a>
+                        <a class="nav-link" href="../all.html">All</a>
                       </li>
                     </ul>
                   </div>
@@ -91,7 +91,7 @@
                     <div class="card-body">
                     <h5 class="card-title">Stage Fright: Show 1</h5>
                     <p class="card-text"></p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <a href="#" class="btn btn-primary">~$25.00 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                     <div class="card-body">
                     <h5 class="card-title">Stage Fright: Show 2</h5>
                     <p class="card-text"></p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <a href="#" class="btn btn-primary">~$25.00 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -113,13 +113,11 @@
                     <div class="card-body">
                     <h5 class="card-title">Stage Fright: Show 3</h5>
                     <p class="card-text"></p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <a href="#" class="btn btn-primary">~$25.00 | Take a look</a>
                     </div>
                 </div>
             </div>
         </div>
-
-        <br>
 
         <div class="row">
             <div class="col-md">
@@ -128,7 +126,7 @@
                     <div class="card-body">
                     <h5 class="card-title">Stage Fright: Show 4</h5>
                     <p class="card-text"></p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <a href="#" class="btn btn-primary">~$25.00 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -139,7 +137,7 @@
                     <div class="card-body">
                     <h5 class="card-title">Stage Fright: Show 5</h5>
                     <p class="card-text"></p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <a href="#" class="btn btn-primary">~$25.00 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -148,9 +146,9 @@
                 <div class="card mx-auto" style="width: 50%;">
                     <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">Stage Fright: Show 6</h5>
+                    <h5 class="card-title">Stage Fright: Gone but Not Forgotten</h5>
                     <p class="card-text"></p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <a href="#" class="btn btn-primary">~$25.00 | Take a look</a>
                     </div>
                 </div>
             </div>
