--- a/pages/Store_Subpages/Categories_Pages/tops.html
+++ b/pages/Store_Subpages/Categories_Pages/tops.html
@@ -76,7 +76,7 @@
                         </ul>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">All</a>
+                        <a class="nav-link" href="../all.html">All</a>
                       </li>
                     </ul>
                   </div>
@@ -91,7 +91,7 @@
                     <div class="card-body">
                     <h5 class="card-title">Scream Team Tee</h5>
                     <p class="card-text">Simple T-shirt with a Stage Fright Logo</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <a href="#" class="btn btn-primary">$15.00 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                     <div class="card-body">
                     <h5 class="card-title">Scream Team Sweatshirt</h5>
                     <p class="card-text">Puffy sweatshirt with a Stage Fright Logo</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <a href="#" class="btn btn-primary">$17.50 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -113,7 +113,7 @@
                     <div class="card-body">
                     <h5 class="card-title">Scream Team Hoodie</h5>
                     <p class="card-text">Fleece hoodie with a Stage Fright Logo on the arms and front</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <a href="#" class="btn btn-primary">$20.00 | Take a look</a>
                     </div>
                 </div>
             </div>
