--- a/pages/Store_Subpages/Collections_Pages/col3.html
+++ b/pages/Store_Subpages/Collections_Pages/col3.html
@@ -76,7 +76,7 @@
                       </ul>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">All</a>
+                      <a class="nav-link" href="../all.html">All</a>
                     </li>
                   </ul>
                 </div>
@@ -91,7 +91,7 @@
                     <div class="card-body">
                     <h5 class="card-title">LA Top</h5>
                     <p class="card-text">With a gold Stage Fright logo, everyone will know you love the Gone But not Forgotten album</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <a href="#" class="btn btn-primary">$15.00 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                     <div class="card-body">
                     <h5 class="card-title">LA Hats</h5>
                     <p class="card-text">With a gold Stage Fright logo, everyone will know you love the Gone But not Forgotten album</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -113,7 +113,7 @@
                     <div class="card-body">
                     <h5 class="card-title">LA Album</h5>
                     <p class="card-text">Listen to songs such as Stuck, Schizo, and more</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
                     </div>
                 </div>
             </div>
