--- a/pages/Store_Subpages/Collections_Pages/col6.html
+++ b/pages/Store_Subpages/Collections_Pages/col6.html
@@ -76,7 +76,7 @@
                         </ul>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">All</a>
+                        <a class="nav-link" href="../all.html">All</a>
                       </li>
                     </ul>
                   </div>
@@ -90,8 +90,8 @@
                     <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
                     <h5 class="card-title">GbNF Top</h5>
-                    <p class="card-text">With a blue Stage Fright logo, everyone will know you love the Gone But not Forgotten album</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <p class="card-text">With a blue Stage Fright logo, everyone will know you love the Gone but Not Forgotten album</p>
+                    <a href="#" class="btn btn-primary">$15.00 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -100,9 +100,9 @@
                 <div class="card mx-auto" style="width: 50%;">
                     <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">GbNF Hats</h5>
-                    <p class="card-text">With a blue Stage Fright logo, everyone will know you love the Gone But not Forgotten album</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <h5 class="card-title">GbNF Hat</h5>
+                    <p class="card-text">With a blue Stage Fright logo, everyone will know you love the Gone but Not Forgotten album</p>
+                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -111,13 +111,48 @@
                 <div class="card mx-auto" style="width: 50%;">
                     <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">GbNF Album</h5>
-                    <p class="card-text">Listen to songs such as Drowning, Megalodon, and more</p>
-                    <a href="#" class="btn btn-primary">Take a look</a>
+                    <h5 class="card-title">GbNF Sticker Pack</h5>
+                    <p class="card-text">Show that you're part of the Scream Team with stickers based off of the Gone but Not Forgotten album</p>
+                    <a href="#" class="btn btn-primary">$5.00 | Take a look</a>
                     </div>
                 </div>
             </div>
         </div>
+
+        <div class="row">
+          <div class="col-md">
+              <div class="card mx-auto" style="width: 50%;">
+                  <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                  <div class="card-body">
+                  <h5 class="card-title">GbNF Poster</h5>
+                  <p class="card-text">Hang up a poster of the Stage Fright Band rocking all blue</p>
+                  <a href="#" class="btn btn-primary">$7.50 | Take a look</a>
+                  </div>
+              </div>
+          </div>
+
+          <div class="col-md">
+              <div class="card mx-auto" style="width: 50%;">
+                  <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                  <div class="card-body">
+                  <h5 class="card-title">GbNF Album</h5>
+                  <p class="card-text">Listen to songs such as Drowning, Megalodon, and more</p>
+                  <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
+                  </div>
+              </div>
+          </div>
+
+          <div class="col-md">
+            <div class="card mx-auto" style="width: 50%;">
+                <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                <div class="card-body">
+                <h5 class="card-title">Show 6: GbNF Ticket</h5>
+                <p class="card-text">Come to see Stage Fright perform the full Gone but Not Forgotten album at the final show of their celebration tour</p>
+                <a href="#" class="btn btn-primary">~$25.00 | Take a look</a>
+                </div>
+            </div>
+        </div>
+      </div>
 
         <script src="../../../js/bootstrap.bundle.js"></script>
     </body>
