--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
         
         <title>Stage Fright</title>
     </head>
@@ -12,7 +15,7 @@
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" style="padding-top: 1em; padding-bottom: 1em;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="images/stage fright.png" alt="logo" width="70" height="70">
+                    <img src="images/stage_fright.png" alt="logo" width="70" height="70">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -31,15 +34,25 @@
                         <li class="nav-item">
                             <a class="nav-link" href="pages/tour.html">Tour</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/checkout.html">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                              <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                              </svg>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
 
-        <div class="container-fluid" style="padding: 0; min-width: 100%;">
-            <img src="images/main-bg.jpg" alt="background" class="img-fluid">
+        <div class="containter-fluid title-container d-flex justify-content-center" style="padding: 0; min-width: 100%;">
+            <img src="images/stage_fright.png" alt="logo" class="img-fluid logo-img" style="padding: 3em;">
         </div>
-        
+        <div class="containter-fluid album-container d-flex justify-content-center" style="padding: 0; min-width: 100%;">
+            <img src="images/GBNF-album.png" alt="GBNF" class="img-fluid GBNF-img " style="padding: 3em;">
+            <div class="align-self-center"><h1 >Gone But <br> Not Forgotten</h1></div>
+        </div>
 
         <script src="js/bootstrap.bundle.js"></script>
     </body>
