added new album section

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
         </div>
         <div class="containter-fluid album-container d-flex justify-content-center" style="padding: 0; min-width: 100%;">
             <img src="images/GBNF-album.png" alt="GBNF" class="img-fluid GBNF-img " style="padding: 3em;">
-            <div class="align-self-center"><h1 >Gone But <br> Not Forgotten</h1></div>
+            <div class="align-self-center GBNF-text">
+                <h1>Gone But <br> Not Forgotten <br></h1>
+                <h5><br>stream now</h5>
+            </div>
         </div>
 
         <script src="js/bootstrap.bundle.js"></script>
